mod1-gcm-service/src/main/kubernetes/35-mod1-gcm-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mod1-gcm
  labels:
    app.kubernetes.io/name: mod1-gcm
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
    prometheus.io/path:   '/manage/prometheus'
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8090
    - name: healthz
      port: 9090
  selector:
    app.kubernetes.io/name: mod1-gcm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mod1-gcm
  labels:
    app.kubernetes.io/name: mod1-gcm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mod1-gcm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mod1-gcm
        blinktShow: 'true'
        blinktColor: "FFFF00"
    spec:
      containers:
        - name: mod1-gcm
          image: yggdrasill.tld/mod2-mod1-gcm
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8090
            - name: healthz
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /manage/health/readiness
              port: healthz
            initialDelaySeconds: 300
            timeoutSeconds: 10
            periodSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /manage/health/liveness
              port: healthz
            initialDelaySeconds: 300
            timeoutSeconds: 10
            periodSeconds: 8
            failureThreshold: 1
          resources:
#            limits:
#              cpu: 1500m
#              memory: 500Mi
            requests:
              cpu: 50m
              memory: 150Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: keystore-volume
              mountPath: /app/keystores
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: keystore-volume
          emptyDir: {}
        - name: vault-tls
          secret:
            secretName: vault-tls-cert
